# email_backup

./: .gitignore  EmailHandler.py  MailProcessor.py  MailboxProcessor.py  main.py  pyproject.toml
