[project]
name = "email-handler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aioimaplib>=2.0.1",
    "click>=8.1.8",
    "html2text>=2024.2.26",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]
